--- a/_sass/popout.sass
+++ b/_sass/popout.sass
@@ -1,11 +1,5 @@
-.container
-  background-color: #9191e9
-  display: flex
-  align-items: center
-  justify-content: center
-  width: 100vw
-  height: 100vh
-
+@import variables
+// Parameterization finished @ 2021, Jul 10th | By Mark
 .popup
   display: flex
   align-items: center
@@ -15,27 +9,28 @@
   height: 100vh
   bottom: 0
   right: 0
-  background-color: rgba(0, 0, 0, 0.4)
-  z-index: 3
+  background-color: $thick-shadow
+  z-index: 5
   visibility: hidden
   opacity: 0
   overflow: hiden
-  transition: 0.64s ease-in-out
+  transition: 0.8s ease-in-out
 
 .popup-inner
   position: relative
   bottom: -100vw
   right: -100vh
+  z-index: 6
   display: block
   align-items: center
   max-width: 1000px
   max-height: 800px
   width: 80%
   height: 85%
-  background-color: #fff
-  transform: rotate(32deg)
-  transition: 0.64s ease-in-out
-  border-radius: 10px
+  background-color: $light-bg-0
+  transform: rotate(30deg)
+  transition: 0.8s ease-in-out
+  border-radius: $padding-s
   overflow-y: auto
 
 .popup:target
@@ -49,17 +44,16 @@
 
 .popup__close
   position: absolute
-  right: 1rem
-  top: 1rem
-  width: 3rem
-  height: 3rem
-  z-index: 4
-  color: #fff
-  line-height: 3rem
+  right: $padding-ms
+  top: $padding-ms
+  width: $padding-l
+  height: $padding-l
+  z-index: 7
+  color: $light-bg-0
+  line-height: $padding-l
   text-align: center
   cursor: pointer
   text-decoration: none
-  border-radius: 50%
   transition: 0.5s
 
   \:hover
