--- a/_sass/search.sass
+++ b/_sass/search.sass
@@ -1,12 +1,12 @@
 @import variables
-
+// Parameterization finished @ 2021, Jul 10th | By Mark
 input
   font-size: $font-m
   padding: $padding-s $padding-s $padding-xxs 0
   width: 100%
   outline-style: none
   margin-bottom: $padding-ms
-  border-bottom: solid 2px grey
+  border-bottom: solid 2px $grey-1
   border-top: none
   border-left: none
   border-right: none
@@ -18,7 +18,7 @@ select
   width: 100%
   outline-style: none
   margin-bottom: $padding-ms
-  border-bottom: solid 2px grey
+  border-bottom: solid 2px $grey-1
   border-top: none
   border-left: none
   border-right: none
@@ -30,7 +30,7 @@ ul[id="results-container"]
     padding: $padding-s 0 0 0
     animation: 0.3s ease-in 0s 1 slideFromRight
   font-size: $font-ms
-  color: #901d1d
+  color: $error-0
   min-height: 25rem
   padding: $padding-s 0 0 0
 
