--- a/css/main.sass
+++ b/css/main.sass
@@ -4,7 +4,7 @@
 @import cayman
 @import mordern-components
 @import personalize
-@import personalize2
+@import fancy_button
 @import codeHighlight
 @import algo_note
 @import popout
