--- a/_sass/cayman.sass
+++ b/_sass/cayman.sass
@@ -1,7 +1,8 @@
 @import variables
+// Parameterization finished at 2021 Jul, 9th | By Mark
 
 ::selection 
-  background: #d1d5e0
+  background: $thin-shadow
 
 * 
   box-sizing: border-box
@@ -12,55 +13,46 @@ body
   font-family: "Helvetica", "Helvetica Neue", Helvetica, Arial, sans-serif
   font-size: $font-xs
   line-height: 1.5
-  color: #1e1e1e
+  color: $grey-0
 
-a 
-  color: #1e6bb8
+
+  
+a.tag 
+  color: white
+  font-size: $padding-ms
+  font-weight: normal
+  background: transparent
+  border: $padding-min solid $theme-2
+  border-radius: $padding-xs
+  padding: $padding-xxs
   text-decoration: none
-  margin-right: $padding-xxs
-  &:hover 
-    text-decoration: underline
-  
-  &.tag 
-    color: white
-    font-size: $padding-ms
-    font-weight: normal
-    background: transparent
-    border: $padding-xxs solid #015d9b
-    border-radius: $padding-xs
-    padding: $padding-xxs
-    text-decoration: none
-    color: #015d9b
-    white-space: nowrap
-    margin-bottom: $padding-xs
-    
-    &::before 
-      display: none
-    
-    &:hover 
-      background-color: #015d9b
-      color: ghostwhite
-    
-  
+  color: $theme-2
+  white-space: nowrap
+  margin-bottom: $padding-xs
+  margin-right: $padding-xs
+  &::before 
+    display: none
+  &:hover
+    // Sorry to use !important here, but removing it will destroy .tag style
+    background-color: $theme-2 !important
+    color: $grey-3
 
 .main-content 
   @include remove-first-last-margin
   word-wrap: break-word
   place-self: stretch
-  
-  a 
-    color: #2b2f31
-    text-decoration: #bbc8cb underline
-    background-color: #eafafe
+  a      
+    color: $theme-3
     padding: $padding-xxs
     text-underline-offset: $padding-xxs
+    text-decoration: none
     &:hover 
-      background-color: #bbeffd
+      background-color: $grey-3
       cursor: pointer
     
     &::before 
       background: url(../assets/link.svg)
-      background-size: $padding-ms $padding-ms
+      background-size: $padding-m $padding-m
       content: " "
       width: $padding-m
       height: $padding-m
@@ -75,7 +67,7 @@ a
     font-size: $font-l
   h2 
     font-size: $font-mxl
-    border-bottom: solid $padding-min #eff0f1
+    border-bottom: solid $padding-min $grey-1
     margin-inline-start: 0px
     margin-inline-end: 0px
   h3 
@@ -91,31 +83,31 @@ a
     margin-bottom: $padding-ms
   
   mark 
-    background-color: #ffe564
-    color: #2b2f31
+    background-color: $marker-yellow
+    color: $grey-0
     padding: $padding-xxs
   
   code 
     padding: $padding-xxs $padding-xs
     font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace
     font-size: $font-xxs
-    background-color: ghostwhite
+    background-color: $light-bg-1
     border-radius: $padding-xxs
-    color: #009494
+    color: $theme-3
   
   pre 
     padding: $padding-s
     margin-top: 0
     margin-bottom: $padding-s
     font: $font-xs Consolas, "Liberation Mono", Menlo, Courier, monospace
-    color: #d9e7eb
+    color: $grey-3
     word-wrap: normal
-    background-color: #222222
+    background-color: $grey-0
     border-radius: $padding-xxs
     & > code 
       padding: 0
       margin: 0
-      color: #d9e7eb
+      color: $grey-3
       word-break: normal
       white-space: pre
       background: transparent
@@ -133,37 +125,38 @@ a
   blockquote 
     padding: 0 $padding-ms
     margin-left: 0
-    color: #819198
-    border-left: $padding-xs solid #dce6f0
+    color: $thick-shadow
+    border-left: $padding-xs solid $grey-1
     @include remove-first-last-margin
   
   .info 
-    background-color: rgb(224, 240, 253)
+    background-color: $grey-3
     padding: 0 $padding-ms
     margin-left: 0
-    border-left: $padding-xs solid #2c3c99
+    border-left: $padding-xs solid $theme-1
     padding: $padding-ms
     margin: $padding-ms 0 $padding-ms 0
-    color: #1a2356
+    color: $theme-1
     @include remove-first-last-margin
   
   .error 
-    background-color: rgb(253, 230, 224)
+    background-color: $error-1
     padding: 0 $padding-ms
     margin-left: 0
-    border-left: $padding-xs solid #c21a1a
+    border-left: $padding-xs solid $error-0
     padding: $padding-ms
     margin: $padding-ms 0 $padding-ms 0
+    color: $error-0
     @include remove-first-last-margin
   
   .notification 
-    background-color: rgb(250, 247, 194)
+    background-color: $notification-1
     padding: 0 $padding-ms
     margin-left: 0
-    border-left: $padding-xs solid orange
+    border-left: $padding-xs solid $notification-0
     padding: $padding-ms
     margin: $padding-ms 0 $padding-ms 0
-    color: #7d602a
+    color: $grey-0
     @include remove-first-last-margin
   
   table 
@@ -190,43 +183,24 @@ a
     
   
   hr 
-    height: 1px
+    height: $padding-min
     padding: 0
     margin: $padding-ms 0
-    background-color: #eff0f1
-    border: 0
-  
-  .note 
-    color: rgb(178, 178, 182)
-    margin-left: auto
-    margin-right: auto
-  
+    background-color: $grey-1
+    border: 0  
 
 .no-decoration 
   a 
     background: transparent
     &::before 
       display: none
-    
-  
-
-.clear 
-  background-color: transparent
-  padding: 0
-  margin: 0
-  text-decoration: none
-  border-color: transparent
-  &::before 
-    background: none
 
 .page-header 
-  color: #000
   text-align: center
   background-image: url("../assets/diamond.svg")
   background-size: cover
 
 .main-page-header 
-  color: #000
   height: 100vh
   text-align: center
   background-image: url("../assets/diamond.svg")
@@ -240,20 +214,19 @@ a
   display: block
 
 .project-tagline 
-  margin-bottom: 2rem
+  margin-bottom: $padding-l
   font-weight: normal
-  opacity: 0.7
-  color: #333333
+  color: $grey-0
 
 .main-project-tagline 
   margin-bottom: 25vh
   font-weight: normal
-  opacity: 0.85
-  color: #333333
+  color: $grey-0
 
 .top-nav-box 
   backdrop-filter: blur(4px)
-  background-color: #ffffffaa
+  -webkit-backdrop-filter: blur(4px)
+  background-color: transparentize($light-bg-0, 0.4)
   position: sticky
   position: -webkit-sticky
   top: 0
@@ -267,23 +240,23 @@ a
 
 .nav-button 
   background: transparent
-  margin-bottom: 5px
+  margin-bottom: $padding-xs
   text-align: center
   cursor: pointer
   flex-grow: 1
-  flex-basis: calc(100% / 5 - 5px)
+  flex-basis: calc(100% / 5 - $padding-xs)
   font-weight: bold
   font-family: 'Microsoft YaHei','微软雅黑'
   &:hover 
-    background: linear-gradient(to right, transparent 30%, #185792 30%, #3277b8 70%, transparent 70%) 0 100% / 100% 5px no-repeat
-    color: #3277b8
+    background: linear-gradient(to right, transparent 30%, $theme-3 30%, $theme-1 50%, $theme-3 70%, transparent 70%) 0 100% / 100% 5px no-repeat
+    color: $theme-2
     margin-bottom: 0
 
 .main-content h1, .main-content h2, .main-content h3, .main-content h4, .main-content h5, .main-content h6 
   margin-top: $padding-l
   margin-bottom: $padding-ms
   font-weight: bold
-  color: #185792
+  color: $theme-2
 
 /* Header Size Overload */
 .main-content .highlight pre, .main-content pre 
@@ -315,19 +288,18 @@ a
 /* Info Block */
 /* Error Block */
 .error h1,.error h2,.error h3,.error h4,.error h5 
-  color: #901d1d
+  color: $error-0
 
 /* Notification Block */
 .notification h1,.notification h2,.notification h3,.notification h4,.notification h5 
-  color: rgb(184, 120, 3)
+  color: $notification-0
 
 .main-content table th, .main-content table td 
   padding: $padding-xs $padding-ms
   border: 1px solid #e9ebec
 
-.site-footer 
+.site-footer
   margin-top: $padding-xxl
-  border-top: solid 1px #eff0f1
   background-image: url("../assets/diamond.svg")
   background-size: 150%
   background-position-y: 90%
@@ -336,11 +308,12 @@ a
 .site-footer-owner 
   display: block
   font-weight: bold
-  color: rgb(219, 219, 226)
+  color: $grey-2
 
 .site-footer-credits 
-  color: #b4c2c9
+  color: $grey-1
 
 .site-footer-credits a, .site-footer-owner a 
-  color: rgb(67, 149, 221)
+  color: $theme-4
+  text-decoration: none
 
