Improve Webpage Style Doc, Improve Jekyll Doc, Improve TOC Style

--- a/_sass/personalize.sass
+++ b/_sass/personalize.sass
@@ -48,7 +48,7 @@ details
     > *
       display: inline
 
-  background-color: #f8f8f8
+  background-color: $grey-3
   padding: $padding-m
   outline: none
   border-radius: $padding-xs
@@ -84,24 +84,24 @@ summary
   overflow-y: auto
   max-height: 90vh
   a
-    color: #777777
+    color: $grey-2
     padding-bottom: $padding-xxs
     margin-left: $padding-xxs
     display: block
     text-decoration: none
   
   a:hover
-    color: #333333
+    color: $theme-1
     margin-left: 0
     font-weight: bold
-    border-left: grey solid $padding-xxs
+    border-left: $theme-2 solid $padding-xxs
 
 .active-toc
-  color: #333333 !important
+  color: $theme-1!important
   margin-left: 0 !important
   text-decoration: none
   font-weight: bold
-  border-left: grey solid $padding-xxs
+  border-left: $theme-2 solid $padding-xxs
 
 // new animations for link starts here
 .link 
