Normalize SASS file names, Reactive Heading size

--- a/_sass/cayman.sass
+++ b/_sass/cayman.sass
@@ -63,22 +63,11 @@ a.tag
     max-width: 100%
     display: block
     margin: 0 auto
-  h1
-    font-size: $font-l
   h2 
-    font-size: $font-mxl
     border-bottom: solid $padding-min $grey-1
     margin-inline-start: 0px
     margin-inline-end: 0px
-  h3 
-    font-size: $font-ml
-  
-  h4 
-    font-size: $font-m
-  
-  h5 
-    font-size: $font-ms
-  
+  // Font-size of headings are defined in reactive-layout.sass
   p 
     margin-bottom: $padding-ms
   
