--- a/_sass/mordern-components.sass
+++ b/_sass/mordern-components.sass
@@ -59,7 +59,7 @@
   @include shadow($padding-ms, $thin-shadow)
   @include main-theme-responsive-gradient
   color: black
-  border-radius: $padding-ml
+  border-radius: $padding-xs
   padding: $padding-s $padding-ml
   margin: $padding-ms
   max-width: fit-content
