--- a/css/main.sass
+++ b/css/main.sass
@@ -4,9 +4,9 @@
 @import cayman
 @import mordern-components
 @import personalize
-@import fancy_button
+@import fancy-button
 @import codeHighlight
-@import algo_note
+@import algo-note
 @import popout
 @import search
-@import reactive_layout
+@import reactive-layout
