Update Jekyll Doc

--- a/_sass/reactive-layout.sass
+++ b/_sass/reactive-layout.sass
@@ -24,6 +24,8 @@
         grid-template-columns: [l-border] 33% [mid-left] 34% [mid-right] 33% [r-border]
     .only-display-at-large
         display: block
+    .hidden-at-large
+        display: none
     // Reactive Heading Size
     h1
         font-size: $font-l
@@ -60,6 +62,8 @@
         grid-template-columns: [l-border] 50% [mid-border] 50% [r-border]
     .only-display-at-large
         display: none
+    .hidden-at-large
+        display: block
     // Reactive Heading Size
     h1
         font-size: $font-mxl
@@ -94,6 +98,8 @@
         grid-template-columns: [l-border] 100% [r-border]
     .only-display-at-large
         display: none
+    .hidden-at-large
+        display: block
     // Reactive Heading Size
     h1
         font-size: $font-ml
