--- a/_sass/personalize.sass
+++ b/_sass/personalize.sass
@@ -52,6 +52,7 @@ details
   padding: $padding-m
   outline: none
   border-radius: $padding-xs
+  margin-bottom: $padding-ms
 
 summary
   outline: none
