--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -7,6 +7,7 @@ Author: Anonymous
   <!-- Script Header for Code Highlight -->
   <link href="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/styles/a11y-dark.min.css" rel="stylesheet">
   <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
+  <script src="/js/util.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <!-- Script Header for Code Language Selector in Algo Notes -->
 </head>
