Fix CS188 Ch 13 Formula @ Bayes Probability; Add CS188 Ch15 (not finished); Fix Online Editor Style

--- a/_includes/component/textarea_placeholder.html
+++ b/_includes/component/textarea_placeholder.html
@@ -1,7 +1,5 @@
 # Try our Real-time markdown editor
 
-> Use ctrl-a delete all texts and start your own typing
-
 An editor that can render any markdown text in the webpage and provide you quick preview even you **don't** have a *jekyll environment* installed on your computer.
 
 More cool functions are also supported, including
@@ -13,7 +11,7 @@ More cool functions are also supported, including
 
 * Math Formula
 
-Since the math formula render relies on `MathJax`, frequent re-render may lead to influent experience. Even though, you can render and preview math formula by pushing "重新渲染数学公式" button at bottom.
+Since the math formula render relies on `MathJax`, frequent re-render may lead to influent experience. Even though, you can render and preview math formula by pushing "渲染数学公式" button at bottom.
 
 $$
 a^2 + b^2 = c^2
