Microsoft Clarity Analysis installed

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
   <!-- Script Header for Table of Content Area -->
-
+  {% include thirdParty/microsoft-clarity.html %}
   <!--{% include thirdParty/baidu-Statistics.html %}-->
   {% include thirdParty/mathJax.html %}
 </head>
