--- a/_includes/page-footer.html
+++ b/_includes/page-footer.html
@@ -5,5 +5,5 @@
     </a>
   </span>
   <span class="site-footer-owner">此网站由广州外国语学校计算机科学社维护。点击查看 <a href="{{ site.baseurl }}/secondary-pages/2021/04/27/Contributors.html">网页贡献者</a>，<a href="{{site.baseurl}}/2021/03/04/Previous-Member.html">历届社团成员</a></span>
-  <span class="site-footer-credits">该网站使用<a href="https://jekyllrb.com/">Jekyll</a>自动生成，<a href="https://gitee.com/help/articles/4136">Gitee Pages</a>提供静态页面托管服务。<img alt="知识共享许可协议" style="border-width:0; float: right; margin-left: 2.2rem;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png"/>本网站采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。</span>
+  <span class="site-footer-credits">该网站使用<a href="https://jekyllrb.com/">Jekyll</a>自动生成，AWS S3 与 CloudFront 提供静态页面托管与全球内容加速服务。<img alt="知识共享许可协议" style="border-width:0; float: right; margin-left: 2.2rem;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png"/>本网站采用<a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">知识共享署名-非商业性使用 4.0 国际许可协议</a>进行许可。</span>
 </footer>
