--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -1,5 +1,6 @@
 ---
-useTOC: true
+useTOC: false
+onRSS: false
 ---
 <!DOCTYPE html>
 <html lang="{{ site.locale }}">
@@ -10,7 +11,7 @@ useTOC: true
     <script src="https://cdn.bootcdn.net/ajax/libs/typed.js/2.0.9/typed.js"></script>
     <script src="https://cdn.bootcdn.net/ajax/libs/typed.js/2.0.9/typed.min.js"></script>
     <!-- Add jquery cdn -->
-    <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+    <script src="/js/jquery.min.js"></script>
   </head>
   <style>
     /* Main Page Down Arrow Floating */
