Fix image link, transfer image bed from gitee to tencent cloud CDN

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,12 +5,12 @@ Author: Anonymous
 ---
 {% include component/report-problem.html %}
 
-<div class="notification">
+<!-- <div class="notification">
     <h3 class="toc_ignore">公告：需要新的维护者！</h3>
     <p>Hello，我是<a href="https://markchenyutian.github.io/blog/about.html">陈昱天 (Mark Chen)</a>，这个网站的创建者。近期观测到网站的使用率明显上升，但是网站的内容最近一次更新已经是在一年前了。由于学业比较繁重，我可能无法花费更多时间维护这个网站的内容。如果有人有意向继续更新/维护本网站的内容欢迎与我联系！</p>
     <p>欢迎大家向身边认识的，学 CS 的同学们安利这个网站 (●'◡'●)！</p>
     <p>联系邮箱：yutianch@andrew.cmu.edu</p>
-</div>
+</div> -->
 {{ content }}
 
 {% if page.comments != false %}
