--- a/_sass/reactive-layout.sass
+++ b/_sass/reactive-layout.sass
@@ -98,7 +98,7 @@
         font-size: $font-xs
         padding: $padding-s 0
     .page-toc
-        display: none;
+        display: none
     .site-footer
         font-size: $font-xxs
     .horizontal-grid-box
